Rename git lc to git ls

--- a/.gitconfig
+++ b/.gitconfig
@@ -27,9 +27,9 @@
     dt = "difftool"
     dts = "difftool --staged"
     l = "log"
-    lc = "log --oneline --decorate"
     ld = "!f() { GIT_EXTERNAL_DIFF=difft git log -p --ext-diff $@; }; f"
     lp = "log -p"
+    ls = "log --oneline --decorate"
     m = "!fish -c 'git_fzf_merge'"
     mt = "mergetool"
     r = "!fish -c 'git_fzf_restore'"
