--- a/settings.json
+++ b/settings.json
@@ -188,7 +188,8 @@
       "after": ["^"]
     }
   ],
-  "terminal.integrated.defaultProfile.osx": "zsh",
+  // Match <> as a pair in addition to standard pairs
   "vim.matchpairs": "(:),{:},[:],<:>",
+  // Use clippy as the linter for rust
   "rust-analyzer.check.command": "clippy"
 }
