Add LLM-powered git commit message hook - Add `z` abbreviation for `zed` in fish config - Add commit system prompt for LLM in `~/.config/prompts/commit-system-prompt.txt` - Add git prepare-commit-msg hook in `~/.git_hooks/prepare-commit-msg` to generate commit messages using LLM - Update `.gitconfig` to use custom git hooks in `~/.git_hooks` - Update `install.conf.yaml` to symlink `~/.git_hooks`
This commit message was written by a large language model.

--- a/.gitconfig
+++ b/.gitconfig
@@ -3,6 +3,7 @@
  	email = rwblickhan@gmail.com
 [core]
     pager = delta --side-by-side --line-numbers
+    hooksPath = ~/.git_hooks
 [delta]
     hyperlinks = true
     hyperlinks-file-link-format = "vscode://file/{path}:{line}"
