Update git config and prepare-commit-msg hook - Add link to blog post explaining the LLM git hook in prepare-commit-msg - Add new git alias 'cap' to add all changes, commit, and push in one command - Minor formatting changes
This commit message was written by a large language model.

--- a/.gitconfig
+++ b/.gitconfig
@@ -17,6 +17,7 @@
     a = "add ."
     bd = "!fish -c 'git_fzf_branch_delete'"
     c = "!fish -c 'git_fzf_checkout'"
+    cap = "!fish -c 'git commit -a && git push'"
     cm = "commit -m"
     camp = "!fish -c 'git_commit_all_message_push $argv'"
     d = "diff"
