Add keybindings for markdown

--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -31,5 +31,23 @@
   // Enable deno
   "deno": {
     "enable": true
+  },
+  "languages": {
+    "TypeScript": {
+      "language_servers": [
+        "deno",
+        "!typescript-language-server",
+        "!eslint",
+        "..."
+      ]
+    },
+    "TSX": {
+      "language_servers": [
+        "deno",
+        "!typescript-language-server",
+        "!eslint",
+        "..."
+      ]
+    }
   }
 }
