--- a/.config/Brewfile
+++ b/.config/Brewfile
@@ -89,8 +89,6 @@ cask "calibre"
 # Fira Code / Fira Mono Nerd Fonts
 cask "font-fira-code-nerd-font"
 cask "font-fira-mono-nerd-font"
-# Route URLs to different browsers
-cask "finicky"
 # Better Spotlight
 cask "raycast"
 # VS Code
@@ -106,6 +104,7 @@ mas "Fantastical", id: 975_937_182
 mas "iA Writer", id: 775_737_590
 mas "Things 3", id: 904_280_696
 mas "Ulysses", id: 122_557_0693
+mas "Velja", id: 160_763_5845
 
 # Astro support
 vscode "astro-build.astro-vscode"
