--- a/.config/Brewfile
+++ b/.config/Brewfile
@@ -7,6 +7,8 @@ tap "dbcli/tap"
 brew "bat"
 # Terminal cheatsheets
 brew "cheat"
+# Cocoapods Swift package manager
+brew "cocoapods"
 # Datasette database explorer
 brew "datasette"
 # Structured diffs
