--- a/.gitconfig
+++ b/.gitconfig
@@ -15,6 +15,7 @@
 rebase = false
 [alias]
   a = "add ."
+  auto = "!fish -c 'git commit -a -m $(~/utils/prepare-commit-msg.sh) && git push'"
   bd = "!fish -c 'git_fzf_branch_delete'"
   c = "!fish -c 'git_fzf_checkout'"
   cap = "!fish -c 'git commit -a && git push'"
