--- a/.gitconfig
+++ b/.gitconfig
@@ -68,3 +68,8 @@ algorithm = histogram
   cmd = code --wait --merge $REMOTE $LOCAL $BASE $MERGED
 [mergetool]
 	keepBackup = false
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
