--- a/.gitconfig
+++ b/.gitconfig
@@ -19,6 +19,7 @@ rebase = false
   bd = "!fish -c 'git_fzf_branch_delete'"
   c = "!fish -c 'git_fzf_checkout'"
   cap = "!fish -c 'git commit -a && git push'"
+  cb = "checkout -b"
   cm = "commit -m"
   cam = "commit -a -m"
   camp = "!fish -c 'git_commit_all_message_push $argv'"
