--- a/.config/gh/config.yml
+++ b/.config/gh/config.yml
@@ -11,6 +11,7 @@ aliases:
     co: pr checkout
     pv: pr view -w
     ps: pr status
+    pm: pr merge
 # The path to a unix socket through which send HTTP connections. If blank, HTTP traffic will be handled by net/http.DefaultTransport.
 http_unix_socket:
 # What web browser gh should use when opening URLs. If blank, will refer to environment.
