--- a/.config/Brewfile
+++ b/.config/Brewfile
@@ -2,6 +2,8 @@
 
 # litecli
 tap "dbcli/tap"
+# git-spice
+tap "abhinav/tap"
 
 # Better cat
 brew "bat"
@@ -31,6 +33,8 @@ brew "fzf"
 brew "gh"
 # Better diff viewer
 brew "git-delta"
+# git stacking
+brew "git-spice"
 # Better curl
 brew "httpie"
 # Plain-text accounting
