--- a/.gitconfig
+++ b/.gitconfig
@@ -45,7 +45,7 @@ rebase = false
   mt = "mergetool"
   r = "!fish -c 'git_fzf_restore'"
   rs = "!fish -c 'git_fzf_restore_staged'"
-  rs = "!fish -c 'git_fzf_restore_staged_worktree'"
+  rsw = "!fish -c 'git_fzf_restore_staged_worktree'"
   s = "status"
   st = "stash"
   oops = "commit -a --no-edit --amend"
