Add git ma / mc

--- a/.gitconfig
+++ b/.gitconfig
@@ -41,7 +41,9 @@ rebase = false
   ld = "!f() { GIT_EXTERNAL_DIFF=difft git log -p --ext-diff $@; }; f"
   lp = "log --oneline -p"
   ls = "log --oneline --decorate"
-  m = "!fish -c 'git_fzf_merge'"
+  ma = "merge --abort"
+  mc = "merge --continue"
+  mf = "!fish -c 'git_fzf_merge'"
   mm = "merge main"
   mt = "mergetool"
   r = "!fish -c 'git_fzf_restore'"
