--- a/.gitconfig
+++ b/.gitconfig
@@ -44,7 +44,7 @@ rebase = false
   ma = "merge --abort"
   mc = "merge --continue"
   mf = "!fish -c 'git_fzf_merge'"
-  mm = "merge main"
+  mm = "merge main --no-edit"
   mt = "mergetool"
   r = "!fish -c 'git_fzf_restore'"
   rs = "!fish -c 'git_fzf_restore_staged'"
