--- a/.gitconfig
+++ b/.gitconfig
@@ -18,11 +18,11 @@ rebase = false
   auto = "!fish -c 'git commit -a -m $(~/utils/prepare-commit-msg.sh) && git push'"
   bd = "!fish -c 'git_fzf_branch_delete'"
   c = "!fish -c 'git_fzf_checkout'"
+  cam = "commit -a -m"
   cap = "!fish -c 'git commit -a && git push'"
+  camp = "!fish -c 'git_commit_all_message_push $argv'"
   cb = "checkout -b"
   cm = "commit -m"
-  cam = "commit -a -m"
-  camp = "!fish -c 'git_commit_all_message_push $argv'"
   cp = "cherry-pick"
   d = "diff"
   ds = "diff HEAD"
@@ -41,9 +41,9 @@ rebase = false
   ld = "!f() { GIT_EXTERNAL_DIFF=difft git log -p --ext-diff $@; }; f"
   lp = "log --oneline -p"
   ls = "log --oneline --decorate"
+  m = "!fish -c 'git_fzf_merge'"
   ma = "merge --abort"
   mc = "merge --continue"
-  mf = "!fish -c 'git_fzf_merge'"
   mm = "merge main --no-edit"
   mt = "mergetool"
   r = "!fish -c 'git_fzf_restore'"
