--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -2236,6 +2236,8 @@
 	<integer>5</integer>
 	<key>TabViewType</key>
 	<integer>0</integer>
+	<key>TimeBetweenTips</key>
+	<real>604800</real>
 	<key>ToolbeltTools</key>
 	<array>
 		<string>Profiles</string>
