Add zig support to vscode

--- a/.config/Brewfile
+++ b/.config/Brewfile
@@ -188,3 +188,5 @@ vscode "ecmel.vscode-html-css"
 vscode "vunguyentuan.vscode-css-variables"
 # Path autocompletion
 vscode "christian-kohler.path-intellisense"
+# zig support
+vscode "ziglang.vscode-zig"
