--- a/.config/Brewfile
+++ b/.config/Brewfile
@@ -86,6 +86,8 @@ brew "zig"
 # Better cd
 brew "zoxide"
 
+# Better Alt-Tab behavior
+cask "alt-tab"
 # Non-Apple display management
 cask "betterdisplay"
 # Calibre ebook manager
