--- a/settings.json
+++ b/settings.json
@@ -209,5 +209,7 @@
   "astro.content-intellisense": true,
   "zig.initialSetupDone": true,
   "zig.path": "/opt/homebrew/bin/zig",
-  "zig.zls.path": "/Users/rwblickhan/Library/Application Support/Code/User/globalStorage/ziglang.vscode-zig/zls_install/zls"
+  "zig.zls.path": "/Users/rwblickhan/Library/Application Support/Code/User/globalStorage/ziglang.vscode-zig/zls_install/zls",
+  "git.blame.editorDecoration.enabled": true,
+  "git.blame.statusBarItem.enabled": true
 }
