--- a/.config/Brewfile
+++ b/.config/Brewfile
@@ -93,6 +93,8 @@ cask "calibre"
 # Fira Code / Fira Mono Nerd Fonts
 cask "font-fira-code-nerd-font"
 cask "font-fira-mono-nerd-font"
+# Better terminal
+cask "ghostty"
 # Use rcmd as hyperkey instead
 cask "hyperkey"
 # Terminal replacement
