--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -8,24 +8,20 @@
 // from the command palette or from `Zed` application menu.
 {
   "buffer_font_family": "FiraMono Nerd Font Mono",
-  "ui_font_size": 16,
-  "buffer_font_size": 16,
-  "theme": "Ayu Dark",
+  "theme": "Twilight",
   // vim-related settings
   "vim_mode": true,
   "relative_line_numbers": true,
-  "cursor_blink": false,
   "vim": {
     "use_multiline_find": true,
     "use_smartcase_find": true
   },
   // Save on focus change
   "autosave": "on_focus_change",
+  "format_on_save": "on",
+  "formatter": "auto",
   // Show git status on tabs
   "tabs": {
     "git_status": true
-  },
-  "terminal": {
-    "copy_on_select": true
   }
 }
