--- a/settings.json
+++ b/settings.json
@@ -60,7 +60,7 @@
   },
   "files.associations": {
     "*.css": "css",
-    "*.mdx": "markdown"
+    "*.mdx": "mdx"
   },
   // Show suggestions even in strings and comments (e.g. for Tailwind)
   "editor.quickSuggestions": {
@@ -198,6 +198,7 @@
   // Match <> as a pair in addition to standard pairs
   "vim.matchpairs": "(:),{:},[:],<:>",
   "vim.sneakReplacesF": true,
+  "vim.replaceWithRegister": true,
   "rust-analyzer.check.command": "clippy",
   "git.enableSmartCommit": true,
   "security.promptForLocalFileProtocolHandling": false,
