--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -3,3 +3,4 @@ theme = "Tomorrow Night Bright"
 macos-titlebar-style = "tabs"
 keybind = alt+left=unbind
 keybind = alt+right=unbind
+command = /opt/homebrew/bin/fish
