Fix gj / gk in vim

--- a/settings.json
+++ b/settings.json
@@ -116,6 +116,14 @@
   "vim.gdefault": true,
   "vim.normalModeKeyBindings": [
     {
+      "before": ["j"],
+      "after": ["g", "j"]
+    },
+    {
+      "before": ["k"],
+      "after": ["g", "k"]
+    },
+    {
       "before": ["L"],
       "after": ["$"]
     },
