--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -11,10 +11,10 @@
   "theme": "Twilight",
   // vim-related settings
   "vim_mode": true,
-  "relative_line_numbers": true,
   "vim": {
     "use_multiline_find": true,
-    "use_smartcase_find": true
+    "use_smartcase_find": true,
+    "toggle_relative_line_numbers": true
   },
   // Save on focus change
   "autosave": "on_focus_change",
