--- a/.config/Brewfile
+++ b/.config/Brewfile
@@ -96,10 +96,10 @@ cask "font-fira-code-nerd-font"
 cask "font-fira-mono-nerd-font"
 # Better terminal
 cask "ghostty"
+# Fix keymappings
+cask "hyperkey"
 # Terminal replacement
 cask "iterm2"
-# Fix keymappings
-cask "karabiner-elements"
 # Fix mouse scrolling
 cask "mac-mouse-fix"
 # Better Spotlight
