--- a/settings.json
+++ b/settings.json
@@ -216,9 +216,8 @@
   "cSpell.userWords": ["descript", "testid"],
   "editor.accessibilitySupport": "off",
   "astro.content-intellisense": true,
-  "zig.initialSetupDone": true,
   "zig.path": "/opt/homebrew/bin/zig",
-  "zig.zls.path": "/Users/rwblickhan/Library/Application Support/Code/User/globalStorage/ziglang.vscode-zig/zls_install/zls",
   "git.blame.editorDecoration.enabled": true,
-  "git.blame.statusBarItem.enabled": true
+  "git.blame.statusBarItem.enabled": true,
+  "zig.zls.enabled": "on"
 }
