--- a/.config/Brewfile
+++ b/.config/Brewfile
@@ -184,3 +184,5 @@ vscode "GitHub.copilot-chat"
 vscode "GitHub.copilot"
 # Open in GitHub
 vscode "sysoev.vscode-open-in-github"
+# Lit
+vscode "runem.lit-plugin"
