Add parent .gitignore to vs code search

--- a/settings.json
+++ b/settings.json
@@ -223,5 +223,6 @@
   "zig.path": "/opt/homebrew/bin/zig",
   "git.blame.editorDecoration.enabled": true,
   "git.blame.statusBarItem.enabled": true,
-  "zig.zls.enabled": "on"
+  "zig.zls.enabled": "on",
+  "search.useParentIgnoreFiles": true
 }
