--- a/settings.json
+++ b/settings.json
@@ -171,6 +171,11 @@
       "before": ["g", ">"],
       "commands": ["shiftArgumentRight"]
     },
+    // Open file on remote
+    {
+      "before": ["g", "o"],
+      "commands": ["gitlens.openFileOnRemote"]
+    },
     // Call hierarchy
     {
       "before": ["g", "y"],
