--- a/.config/Brewfile
+++ b/.config/Brewfile
@@ -113,13 +113,13 @@ cask "zen-browser"
 # Zed editor
 cask "zed"
 
-mas "GoodLinks", id: 147_433_5294
-mas "Fantastical", id: 975_937_182
-mas "Hidden Bar", id: 145_245_3066
-mas "iA Writer", id: 775_737_590
-mas "Things 3", id: 904_280_696
-mas "Ulysses", id: 122_557_0693
-mas "Velja", id: 160_763_5845
+# mas "GoodLinks", id: 147_433_5294
+# mas "Fantastical", id: 975_937_182
+# mas "Hidden Bar", id: 145_245_3066
+# mas "iA Writer", id: 775_737_590
+# mas "Things 3", id: 904_280_696
+# mas "Ulysses", id: 122_557_0693
+# mas "Velja", id: 160_763_5845
 
 # Astro support
 vscode "astro-build.astro-vscode"
