Add global dotfile

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -38,6 +38,10 @@
       create: true
       force: true
       path: .hammerspoon
+    ~/justfile:
+      create: true
+      force: true
+      path: justfile
 
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
