Revert "Remove clean"
This reverts commit d38d23885797a2506c6cae7477731e250b4dfd7a.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -3,6 +3,8 @@
     link:
       relink: true
 
+- clean: ["~"]
+
 - link:
     ~/Library/Application Support/Code/User/settings.json:
       create: true
